Do not make LFRB_EXPORT visible in documentation.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -80,7 +80,7 @@ if(DOXYGEN_FOUND)
     set(DOXYGEN_ENABLE_PREPROCESSING YES)
     set(DOXYGEN_MACRO_EXPANSION YES)
     set(DOXYGEN_EXPAND_ONLY_PREDEF YES)
-    set(DOXYGEN_PREDEFINED CIO_EXPORT)
+    set(DOXYGEN_PREDEFINED LFRB_EXPORT)
 
     doxygen_add_docs(${PROJECT_NAME}_docs
         ${PROJECT_SOURCE_DIR}
