--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
         run: sudo apt-get install ninja-build
 
       - name: Configure
-        run:  cmake -G Ninja -DCMAKE_TOOLCHAIN_FILE=toolchains/x86-linux-gcc-9.cmake -DCMAKE_BUILD_TYPE=Coverage ..
+        run:  cmake -G Ninja -DCMAKE_TOOLCHAIN_FILE=toolchains/x86-linux-gcc-9.cmake -DCMAKE_BUILD_TYPE=Coverage .
 
       - name: build
         run:  ninja
